# OpenRack

./: .gitignore  ComicLibrary.py  OpenRack.csproj  OpenRack.py  OpenRack.pyproj  OpenRack.pyproject  OpenRack.sln  XMLtest.py  config.py  dbpopup.ui  dbtest.py  libraryscantest.py  libraryscantest.py.old  main.py  mainwindow.ui  mainwindow_ui.py  methods.py  openfile.py  openrack.ini  preferences.ui  preferences_ui.py  test.py  testingthumbs.py  thumbnailgenerator.py  ui_form.py  ui_mainwindow.py  yamltest.py
Common/Windows/Forms/: TwitterPinDialog.cs
Projects/ComicRack/Viewer/: CommandHandler.cs  CommandMapper.cs  IDisplayWorkspace.cs  IMain.cs  MainForm.cs  NavigatorManager.cs  NewsStorage.cs  OpenComicOptions.cs  OptimizedProfessionalColorTable.cs  OptimizedTanColorTable.cs  Program.cs  ReaderForm.cs  ScriptOutputForm.cs  ScriptUtility.cs  SearchEngines.cs  ServiceCommandHandler`1.cs  ServiceUpdateHandler`1.cs  Twitter.cs  UpdateHandler.cs  Win7.cs
Projects/ComicRack/Viewer/Config/: BookPageLayout.cs  DefaultLists.cs  (+9 more)
old junk/old/: dbtest.py.old
old junk/pyqt - deprecated/: OpenRack.py  dbpopup_ui.py  icons.qrc  preferences.ui  preferences_ui.py
openrack/: Cargo.toml  __init__.py  db.py  openrack.py
openrack-app/: __init__.py  schema.sql
openrack/src/: main.rs  routes.rs
openrack/src/modules/: filehandler.rs
openrack/templates/app/: index.html.j2
openrackapp/: __init__.py  db.py  main.py  openrack.py
openrackapp/templates/: base.html.j2
pyqt - deprecated/: config.py  mainwindow.py  mainwindow.ui  mainwindow_ui.py
testscripts/: yamltest.py
(+95 files in other folders)
