[package]
name = "openrack"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
hyper = "1.2.0"
minijinja = { version = "1.0.12", features = ["builtins"] }
rar = "0.2.0"
rusqlite = "0.31.0"
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread", "full"] }
unrar = "0.5.3"
walkdir = "2.5.0"
xml-rs = "0.8.19"
zip = "0.6.6"
